# hadeeda

./: MANIFEST.in  bismallah_hadeeda_spec_inshaallah.md  deploy_hadeeda.sh  deploy_paramiko.py  hadeeda_v2.md  requirements.txt  setup.cfg  setup.py
.agent/skills/frappe-expert-developer/references/: adaptive_learning.md  api_reference.md
.agent/skills/frappe-expert-developer/scripts/: example.py
.agent/skills/server-admin-guardian/scripts/: execute_ui_fix.py
Comprehensive Skill Development for Frappe_ERPNext and Server Administration/: 01_SERVER_ECOSYSTEM.md  BISMALLAH_ETHIOBIZ_DEVELOPER_SOP_INSHAALLAH.md  check_server_status.py  frappe-expert-developer.skill  frappe_dev_guide.md  server-admin-guardian.skill
ETHIOBIZ_EXPERT_SYSTEM/: 00_AGENT_MANIFESTO.md  02_APP_ARCHITECTURE.md  03_OPERATIONAL_PROTOCOLS.md  04_UI_CUSTOMIZATION_REFERENCE.md  05_DATABASE_AND_N8N_INTEGRATION.md
hadeeda/: hooks.py  modules.txt
hadeeda/hadeeda/: __init__.py  chat.py
hadeeda/hadeeda/api/: chat.py
hadeeda/hadeeda/controllers/: agent_controller.py  ai_integration.py  skill_engine.py  sop_engine.py
hadeeda/hadeeda/dashboard_chart/hda_task_completion_trend/: hda_task_completion_trend.json
hadeeda/hadeeda/doctype/hda_agent/: hda_agent.js  hda_agent.json  hda_agent.py
hadeeda/hadeeda/doctype/hda_agent_allowed_doctype/: hda_agent_allowed_doctype.js  hda_agent_allowed_doctype.json  hda_agent_allowed_doctype.py
hadeeda/hadeeda/doctype/hda_agent_conversation/: hda_agent_conversation.js  hda_agent_conversation.json  (+1 more)
hadeeda/tests/: test_skill_engine.py  test_sop_engine.py
(+159 files in other folders)
