[metadata]
name = hadeeda
version = 0.0.1
description = AI-powered Chief of Staff for ERPNext
long_description = file: README.md
long_description_content_type = text/markdown
author = Biz Technology Solutions
author_email = support@biztech.et
license = MIT

[options]
packages = find:
include_package_data = True
